# stellar--soroban-transaction-invoke-example

./: Cargo.toml  Makefile  README.md
contract/: Cargo.toml
contract/src/: lib.rs
src/: main.rs
tx/: Cargo.toml
tx/src/: main.rs
