[package]
name = "contract"
version = "0.0.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.64"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { version = "0.0.4" }

[dev-dependencies]
soroban-sdk = { version = "0.0.4", features = ["testutils"] }
